// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application component renders teams member cards 1`] = `
<div
  className="cadre__page managerTeamMembers"
>
  <div
    className="teamTitle"
  >
    <div>
      <h1>
        My Teams
      </h1>
      <div
        className="technologies"
      >
        <StackRectangle
          key="weak-key-0"
          stackName="React-JS"
        />
        <StackRectangle
          key="weak-key-1"
          stackName="React-JS"
        />
        <StackRectangle
          key="weak-key-2"
          stackName="React-JS"
        />
      </div>
    </div>
    <Filter
      characterLength={9}
      chevronColor="#808FA3"
      current="All Roles"
      dropdownBackgroundColor="#FFFFFF"
      fontSize=""
      getFilter={[Function]}
      items={
        Array [
          "All Roles",
          "Technical Coordinator",
        ]
      }
      search={false}
      width="400"
    />
  </div>
  <div
    className="teamMembers"
  >
    <TeamCard
      cohort="NBO-13"
      date="20/11/2019"
      dateType=""
      event={[Function]}
      image="https://lorempixel.com"
      key="weak-key-3"
      name="john doe"
      project="Travella"
      role="Technical Coordinator"
    />
    <TeamCard
      cohort="NBO-13"
      date="20/11/2019"
      dateType=""
      event={[Function]}
      image="https://lorempixel.com"
      key="weak-key-4"
      name="john doe"
      project="WatchTower"
      role="Technical Coordinator"
    />
    <TeamCard
      cohort="NBO-13"
      date="20/11/2019"
      dateType=""
      event={[Function]}
      image="https://lorempixel.com"
      key="weak-key-5"
      name="john doe"
      project="WatchTower"
      role="Technical Coordinator"
    />
  </div>
</div>
`;

exports[`Application component should test roles dropdown 1`] = `
<div
  className="cadre__page managerTeamMembers"
>
  <div
    className="teamTitle"
  >
    <div>
      <h1>
        My Teams
      </h1>
      <div
        className="technologies"
      >
        <StackRectangle
          key="weak-key-0"
          stackName="React-JS"
        />
        <StackRectangle
          key="weak-key-1"
          stackName="React-JS"
        />
        <StackRectangle
          key="weak-key-2"
          stackName="React-JS"
        />
      </div>
    </div>
    <Filter
      characterLength={9}
      chevronColor="#808FA3"
      current="All Roles"
      dropdownBackgroundColor="#FFFFFF"
      fontSize=""
      getFilter={[Function]}
      items={
        Array [
          "All Roles",
          "Technical Coordinator",
        ]
      }
      search={false}
      width="400"
    />
  </div>
  <div
    className="teamMembers"
  >
    <TeamCard
      cohort="NBO-13"
      date="20/11/2019"
      dateType=""
      event={[Function]}
      image="https://lorempixel.com"
      key="weak-key-9"
      name="john doe"
      project="Travella"
      role="Technical Coordinator"
    />
    <TeamCard
      cohort="NBO-13"
      date="20/11/2019"
      dateType=""
      event={[Function]}
      image="https://lorempixel.com"
      key="weak-key-10"
      name="john doe"
      project="WatchTower"
      role="Technical Coordinator"
    />
    <TeamCard
      cohort="NBO-13"
      date="20/11/2019"
      dateType=""
      event={[Function]}
      image="https://lorempixel.com"
      key="weak-key-11"
      name="john doe"
      project="WatchTower"
      role="Technical Coordinator"
    />
  </div>
</div>
`;
